--- a/index.html
+++ b/index.html
@@ -83,39 +83,39 @@
 		<h1>Skills</h1>
 		<div class="tools">
 			<div class="row">
-				<div class= "program col-lg-2 col-md-4 col-sm-6">
+				<div class= "program col-lg-2 col-md-4 col-sm-6 col-6">
 					<i class="fab fa-java fa-5x"></i>
 					<h3>Java</h3>
 				</div>
-				<div class= "program col-lg-2 col-md-4 col-sm-6">
+				<div class= "program col-lg-2 col-md-4 col-sm-6 col-6">
 					<i class="fab fa-python fa-5x"></i>
 					<h3>Python</h3>
 				</div>
-				<div class= "program col-lg-2 col-md-4 col-sm-6">
+				<div class= "program col-lg-2 col-md-4 col-sm-6 col-6">
 					<i class="fab fa-js fa-5x"></i>
 					<h4>JavaScript</h4>
 				</div>
-				<div class= "program col-lg-2 col-md-4 col-sm-6">
+				<div class= "program col-lg-2 col-md-4 col-sm-6 col-6">
 					<i class="fab fa-node-js fa-5x"></i>
 					<h3>Node.js</h3>
 				</div>
-				<div class= "program col-lg-2 col-md-4 col-sm-6">
+				<div class= "program col-lg-2 col-md-4 col-sm-6 col-6">
 					<i class="fas fa-database fa-5x"></i>
 					<h3>MySql</h3>
 				</div>
 				
-				<div class= "program col-lg-2 col-md-4 col-sm-6">
+				<div class= "program col-lg-2 col-md-4 col-sm-6 col-6">
 					<i class="fab fa-html5 fa-5x"></i>
 					<h3>HTML5</h3>
 				</div>
 
-				<div class= "program col-lg-2 col-md-4 col-sm-6">
+				<div class= "program col-lg-2 col-md-4 col-sm-6 col-6">
 					<i class="fab fa-css3-alt fa-5x"></i>
 					<h3>CSS3</h3>
 				</div>
-				<div class= "program col-lg-2 col-md-4 col-sm-6">
+				<div class= "program col-lg-2 col-md-4 col-sm-6 col-6">
 					<i class="fas fa-server fa-5x"></i>
-					<h4>MongooseDB</h4>
+					<h4>MongoDB</h4>
 				</div>
 			</div>
 			<h2>And always learning...</h2>
@@ -167,7 +167,7 @@
 				</div>
 				<div class= "connect col-4">
 					<i class="far fa-file fa-5x"></i>
-					<h3>Download Resume</h3>
+					<h3>Resume</h3>
 				</div>
 			
 		</body>
