Added resume and made it able to download

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>Luis Moran</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet"  href="css/styles.css">
+		<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -23,7 +24,7 @@
 			<div class= "container-fluid">
 				<div id="head-container">
 					<nav class="navbar navbar-expand-lg navbar-dark">
-						<a class="navbar-brand" href="#"><img src="images/LuisMLogo.png" alt="Luis Logo"></a>
+						<a class="navbar-brand" href="#hello"><img src="images/LuisMLogo.png" alt="Luis Logo"></a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="toggle-button"><i class="fas fa-bars fa-lg"></i></span>
 						</button>
@@ -175,11 +176,11 @@
 					<h3>Email</h3>
 				</div>
 				<div class= "connect col-4">
-					<a href="www.linkedin.com/in/luis-moran2018"><i class="fab fa-linkedin fa-5x"></i></a>
+					<a href="https://www.linkedin.com/in/luis-moran2018/"><i class="fab fa-linkedin fa-5x"></i></a>
 					<h3>LinkedIn</h3>
 				</div>
 				<div class= "connect col-4">
-					<i class="far fa-file fa-5x"></i>
+					<a href="images/LuisMoran.pdf" download><i class="far fa-file fa-5x"></i></a>
 					<h3>Resume</h3>
 				</div>
 			
