Added new resume and added content about heroku

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<div class="card-body">
 						<h5 class="card-title">Secrets</h5>
 						<p class="card-text">A place to tell your secrets annonymously. Secrets are safe here due to the strong encryption put into place to protect user's passwords.
-						Constructed using: HTML5, CSS3, Javascript, Node.js, mongooseDB, bcrypt, ejs, express</p>
+						Constructed using: HTML5, CSS3, Javascript, Node.js, mongooseDB, bcrypt, ejs, express. Run using Heroku may take a few minutes to load. </p>
 						</div>
 					 </div>
 					</div>
@@ -72,7 +72,7 @@
 						<a href="https://cryptic-depths-24501.herokuapp.com/"><img class="card-img-top" src="images/newsletter.png"  alt="picture of newsletter"></a>
 						<div class="card-body">
 						<h5 class="card-title">Newsletter</h5>
-						<p class="card-text">Want to get some of the latest news from your's truly. Well sign up and hear what I have to say! Constructed using: Mail chimp API, node.js, HTML5, CSS3, express, body-parser</p>
+						<p class="card-text">Want to get some of the latest news from your's truly. Well sign up and hear what I have to say! Constructed using: Mail chimp API, node.js, HTML5, CSS3, express, body-parser. Run using Heroku may take a few minutes to load.</p>
 						</div>
 					 </div>
 					</div>
