--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 					<h3>LinkedIn</h3>
 				</div>
 				<div class= "connect col-4">
-					<a href="images/LuisMoranResume.pdf" download><i class="far fa-file fa-5x"></i></a>
+					<a href="images/Luis Moran.pdf" download><i class="far fa-file fa-5x"></i></a>
 					<h3>Resume</h3>
 				</div>
 			
