--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					<h4>MongoDB</h4>
 				</div>
 			</div>
-			<h2>And always learning more...</h2>
+			<h2>And always learning more....</h2>
 		</div>			
 	</section>
 
