fixed work experience

--- a/index.html
+++ b/index.html
@@ -141,20 +141,25 @@
 		<div class="experience">
 			<h3>Purchasing Assistant | Martin Brower <br>(Nov 2018-Present)</h3>
 		<ul class="list-group">
-		  <li class="list-group-item">Supervise receivers</li>
-		  <li class="list-group-item">Set up inbound and outbound transfer orders.</li>
-		  <li class="list-group-item">Create coversheets, scan sheets, variance reports, and notes for all incoming product. </li>
-		  <li class="list-group-item">Enter all counts and variances into Warehouse Database Management System and Enterprise One System.</li>
-		  <li class="list-group-item">Enter claims into Sales Force</li>
+		  <li class="list-group-item">Supervise receiving team to handle inbound loads.</li>
+		  <li class="list-group-item">Confirm correct amounts received on bill of lading.  </li>
+		  <li class="list-group-item">Set up inbound and outbound transfer orders.  </li>
+		  <li class="list-group-item">Manage appointment times for deliveries.  </li>
+		  <li class="list-group-item">Create inbound schedule, coversheets, scan sheets, variance reports, and notes for all incoming    loads.  </li>
+		  <li class="list-group-item">Enter all counts and variances into Warehouse Management System and Enterprise One System.  </li>
+		  
 		</ul>
 
 			<h3>Specimen Technician | Quest Diagnostics <br>(June 2014 - Nov 2018)</h3>
 			 <ul class="list-group">
-			  <li class="list-group-item">Handle patient information and testing requirements needed for samples. </li>
-			  <li class="list-group-item">Problem code errors in patient information or not meeting sample requirements for testing. </li>
-			  <li class="list-group-item">Input patient information into Front End Database System </li>
-			  <li class="list-group-item">Enter all counts and variances into Warehouse Database Management System and Enterprise One System.</li>
-			  <li class="list-group-item">Database search testing information using Overview (Tandem).</li>
+			  <li class="list-group-item">Enter patient information and prepare specimens for testing.</li>
+			  <li class="list-group-item">Problem code errors related to improper patient information or not meeting sample requirements for testing.  </li>
+			  <li class="list-group-item">Submit test information for second review  </li>
+			  <li class="list-group-item">Meet performance quota of 90 patients an hour.  </li>
+			  <li class="list-group-item">E-mail clients regarding sample problems. </li>
+			  <li class="list-group-item">Input patient information into Front End System  </li>
+			  <li class="list-group-item">Search patient information using Overview database (Tandem).  </li>
+			
 			</ul>
 
 		</div>
