added new project on website

--- a/index.html
+++ b/index.html
@@ -46,16 +46,28 @@
 						</div>
 					</nav>
 					<div id = "hello" class="heading">
-						<h1>Hello Everyone! Welcome To The Website of Luis Moran!</h1>
+						<h1>Hello Everyone! Welcome To My Website!</h1>
 					</div>
 				</div>
 			</div>
 		</section>
 		<section id="portfolio">
-			<h1>Projects</h1>
+			<h1>Projects (click to visit)</h1>
 				<div class="row">
 
-					<div class="port col-lg-4 col-md-12 d-flex align-items-stretch">
+
+					<div class="port col-lg-6 col-md-12 d-flex align-items-stretch">
+						<div class="card shadow ">
+						<a href="https://luismorandev.github.io/Alphabets/"><img class="card-img-top " src="images/alphabets.png"  alt="picture of alphabets"></a>
+						<div class="card-body">
+						<h5 class="card-title">Learn the Alphabet</h5>
+						<p class="card-text">I decided to make a fun game for kids to learn their alphabets. As my son likes to play games I thought this would be perfect for him to learn it on his IPad.
+						Constructed using: Javascript ES6, HTML5, CSS3, bootstrap</p>
+						</div>
+					 </div>
+					</div>
+
+					<div class="port col-lg-6 col-md-12 d-flex align-items-stretch">
 						<div class="card shadow ">
 						<a href="https://damp-gorge-61979.herokuapp.com"><img class="card-img-top " src="images/secrets.png"  alt="picture of Secret"></a>
 						<div class="card-body">
@@ -66,7 +78,7 @@
 					 </div>
 					</div>
 
-					<div class="port col-lg-4 col-md-12 d-flex align-items-stretch">
+					<div class="port col-lg-6 col-md-12 d-flex align-items-stretch">
 						<div class="card shadow ">
 						<a href="https://cryptic-depths-24501.herokuapp.com/"><img class="card-img-top" src="images/newsletter.png"  alt="picture of newsletter"></a>
 						<div class="card-body">
@@ -76,7 +88,7 @@
 					 </div>
 					</div>
 
-					<div class="port col-lg-4 col-md-12 d-flex align-items-stretch">
+					<div class="port col-lg-6 col-md-12 d-flex align-items-stretch">
 						<div  class="card shadow ">
 						<a href="https://luismorandev.github.io/SimonGame/"><img class="card-img-top" src="images/simon.png"  alt="picture of game"></a>
 						<div class="card-body">
