added two projects and tidied up css

--- a/index.html
+++ b/index.html
@@ -46,25 +46,45 @@
 						</div>
 					</nav>
 					<div id = "hello" class="heading">
-						<h1>Hello Everyone! Welcome To My Website!</h1>
+						<h1>Hello Everyone! My name is Luis Moran</h1>
 					</div>
 				</div>
 			</div>
 		</section>
 		<section id="portfolio">
-			<h1>Projects (click to visit)</h1>
+			<h1>Projects <br/>
+				(click to visit, apps hosted by Heroku will take time to load)</h1>
 				<div class="row">
-
 
 					<div class="port col-lg-6 col-md-12 d-flex align-items-stretch">
 						<div class="card shadow ">
-						<a href="https://luismorandev.github.io/Alphabets/"><img class="card-img-top " src="images/alphabets.png"  alt="picture of alphabets"></a>
-						<div class="card-body">
-						<h5 class="card-title">Learn the Alphabet</h5>
-						<p class="card-text">I decided to make a fun game for kids to learn their alphabets. As my son likes to play games I thought this would be perfect for him to learn it on his IPad.
-						Constructed using: Javascript ES6, HTML5, CSS3, bootstrap</p>
-						</div>
-					 </div>
+							<a href="https://radiant-cliffs-82267.herokuapp.com/"><img class="card-img-top " src="images/phpcontacts.png"  alt="picture of php contacts "></a>
+							<div class="card-body">
+							<h5 class="card-title">Contact Board </h5>
+							<p class="card-text">This is a web app that keeps contacts in a card. You can add and delete contacts as you please. The contacts are being stored in a MySQL database and backend is using PHP. With the help of HTML and CSS to make the app take shape. </p>
+							</div>
+					    </div>
+					</div>
+
+					<div class="port col-lg-6 col-md-12 d-flex align-items-stretch">
+						<div class="card shadow ">
+							<a href="https://luismorandev.github.io/Programming-Problems/"><img class="card-img-top " src="images/programproblems.png"  alt="picture of programming problems"></a>
+							<div class="card-body">
+							<h5 class="card-title">Programming Problems</h5>
+							<p class="card-text">This is a web app with programming problems that have been solved in Javascript. The front end is being rendered by React. Each problem has its own component where the code that solves the problem is located. In this web app React, Javascript, HTML5 and CSS3 are used.</p>
+							</div>
+					    </div>
+					</div>
+
+					<div class="port col-lg-6 col-md-12 d-flex align-items-stretch">
+						<div class="card shadow ">
+							<a href="https://luismorandev.github.io/Alphabets/"><img class="card-img-top " src="images/alphabets.png"  alt="picture of alphabets"></a>
+							<div class="card-body">
+							<h5 class="card-title">Learn the Alphabet</h5>
+							<p class="card-text">I decided to make a fun game for kids to learn their alphabets. As my son likes to play games I thought this would be perfect for him to learn it on his IPad.
+							Constructed using: Javascript ES6, HTML5, CSS3, bootstrap</p>
+							</div>
+					    </div>
 					</div>
 
 					<div class="port col-lg-6 col-md-12 d-flex align-items-stretch">
